# PhotonMapping

./: .gitignore  .gitignore.swp  README.md
input/: scene_box.txt  scene_debug.txt  scene_plane.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  basic.cpp  basic.h  bezier.cpp  bezier.h  bmp.cpp  camera.cpp  camera.h  cmake_install.cmake  color.cpp  color.h  intsct.h  kit.cpp  kit.h  light.cpp  light.h  main.cpp  material.cpp  material.h  object.h  photon.h  photonmap.cpp  photonmap.h  photontracer.cpp  photontracer.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  texture.cpp  typdef.h  vector3.cpp  vector3.h
